--- a/src/main/webapp/i18n/en/home.json
+++ b/src/main/webapp/i18n/en/home.json
@@ -1,7 +1,7 @@
 {
   "home": {
-    "title": "Welcome, Java Hipster!",
-    "subtitle": "This is your homepage",
+    "title": "MoneyIO",
+    "subtitle": "Manage the money you loaned.",
     "logged": {
       "message": "You are logged in as user \"{{username}}\"."
     },
